--- a/Blog-one.html
+++ b/Blog-one.html
@@ -15,9 +15,9 @@
     <nav>
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="blog-one.html">BLOG 1</a></li>
-        <li><a href="blog-two.html">BLOG 2</a></li>
-        <li><a href="blog-three.html">BLOG 3</a></li>
+        <li><a href="Blog-one.html">BLOG 1</a></li>
+        <li><a href="Blog-two.html">BLOG 2</a></li>
+        <li><a href="Blog-three.html">BLOG 3</a></li>
       </ul>
     </nav>
   </header>
@@ -101,5 +101,6 @@
 
   <footer>Copyright &copy; 2030 by Ian Yuki All Rights Reserved.</footer>
 </body>
+
 
 </html>
