--- a/Blog-three.html
+++ b/Blog-three.html
@@ -15,9 +15,9 @@
     <nav>
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="blog-one.html">BLOG 1</a></li>
-        <li><a href="blog-two.html">BLOG 2</a></li>
-        <li><a href="blog-three.html">BLOG 3</a></li>
+        <li><a href="https://github.com/iancmyuki/html_foundation/blob/main/Blog-one.html">BLOG 1</a></li>
+        <li><a href="https://github.com/iancmyuki/html_foundation/blob/main/Blog-two.html">BLOG 2</a></li>
+        <li><a href="https://github.com/iancmyuki/html_foundation/blob/main/Blog-three.html">BLOG 3</a></li>
       </ul>
     </nav>
   </header>
@@ -94,5 +94,6 @@
 
   <footer>Copyright &copy; 2030 by Ian Yuki All Rights Reserved.</footer>
 </body>
+
 
 </html>
