--- a/Blog-one.html
+++ b/Blog-one.html
@@ -14,10 +14,10 @@
     <h1>IAN YUKI</h1>
     <nav>
       <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="https://github.com/iancmyuki/html_foundation/blob/main/Blog-one.html">BLOG 1</a></li>
-        <li><a href="https://github.com/iancmyuki/html_foundation/blob/main/Blog-two.html">BLOG 2</a></li>
-        <li><a href="https://github.com/iancmyuki/html_foundation/blob/main/Blog-three.html">BLOG 3</a></li>
+       <li><a href="index.html">HOME</a></li>
+        <li><a href="Blog-one.html">BLOG 1</a></li>
+        <li><a href="Blog-two.html">BLOG 2</a></li>
+        <li><a href="Blog-three.html">BLOG 3</a></li>
       </ul>
     </nav>
   </header>
@@ -104,4 +104,5 @@
 
 
 </html>
+
 
