--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav>
       <ul>
       <li><a href="index.html">HOME</a></li>
-        <li><a href="Blog-one.html">BLOG 1</a></li>
-        <li><a href="Blog-two.html">BLOG 2</a></li>
-        <li><a href="Blog-three.html">BLOG 3</a></li>
+        <li><a href="blog-one.html">BLOG 1</a></li>
+        <li><a href="blog-two.html">BLOG 2</a></li>
+        <li><a href="blog-three.html">BLOG 3</a></li>
       </ul>
     </nav>
   </header>
@@ -93,4 +93,5 @@
 </body>
 
 </html>
+
 
