--- a/blog-one.html
+++ b/blog-one.html
@@ -84,15 +84,15 @@
     <h4>Related posts</h4>
     <ul>
       <li>
-        <h4> <a href="Blog-one.html"> What is CSS? </a> </h4>
+        <h4> <a href="blog-one.html"> What is CSS? </a> </h4>
         <p>By Ian Yuki</p>
       </li>
       <li>
-        <h4> <a href="Blog-two.html">What is Javascript </a></h4>
+        <h4> <a href="blog-two.html">What is Javascript </a></h4>
         <p>By Ian Yuki</p>
       </li>
       <li>
-        <h4> <a href="Blog-three.html">What is a Web Framework? </a> </h4>
+        <h4> <a href="blog-three.html">What is a Web Framework? </a> </h4>
         <p>By Ian Yuki</p>
       </li>
 
@@ -101,5 +101,6 @@
 
   <footer>Copyright &copy; 2030 by Ian Yuki All Rights Reserved.</footer>
 </body>
+
 
 </html>
